<resources>
    <string name="app_name">移乐邦</string>
    <string name="action_settings">设置</string>
    <string name="Login_UserName">用户名 :</string>
    <string name="Login_Password">密码 :</string>
    <string name="Login_Login">登&#160;&#160;&#160;录</string>
    <string name="Login_Register">免费注册</string>
    <string name="Login_Skip">跳过\>\></string>
    <string name="Register_Username_Error">请输入您的用户名</string>
    <string name="Register_Password_Error">请输入您的密码</string>
    <string name="Register_Repassword_Error">您输入的密码不正确、请重新输入密码</string>
    <string name="MSG_Success">操作成功！</string>
    <string name="MSG_NoSel_Data">请选择商品类型</string>
    <string name="MSG_NoInternet_Connection">没有网络连接</string>
    <string name="RegisterRequest_InputPhoneNum">请输入您的手机号码</string>
    <string name="MSG_Invalid_PhoneNum">请输入有效的电话号码</string>
    <string name="MSG_Invalid_UserName">用户名长度为2~25位字符</string>
    <string name="RegisterRequestSMS_PhoneNumber">填写手机号码</string>
    <string name="RegisterRequestSMS_SMSVerify">用户信息</string>
    <string name="RegisterRequestSMS_Complete">完成</string>
    <string name="RegisterRequestSMS_Hint1">已阅读并同意使用条款和隐私政策</string>
    <string name="RegisterRequestSMS_Hint2">移乐邦不会绑定任何，不会泄漏您的手机号。</string>
    <string name="RegisterRequestSMS_RequestSMS">下一步</string>
    <string name="RegisterRequestVerifySMS_RePassword">确认密码:</string>
    <string name="RegisterRequestVerifySMS_SMSVerify">手机验证码:</string>
    <string name="RegisterRequestVerifySMS_RecommendPhoneNum">推荐人手机:</string>
    <string name="RegisterRequestVerifySMS_Send">提交，完成注册</string>
    <string name="Register_MSG_SelectChkBox">想进下一步必须得勾选</string>
    <string name="BaseService_ZhuanWaiKuai">赚外快</string>
    <string name="BaseService_YiYuanQuan">一元券</string>
    <string name="BaseService_YouHuiJiHe">优惠集合</string>
    <string name="BaseService_QianChaHui">黔茶汇</string>
    <string name="BaseService_QianJiuHui">黔酒汇</string>
    <string name="BaseService_QianTeChan">黔特产</string>
    <string name="BaseService_More">MORE</string>
    <string name="BaseService_ZhuanWaiKuaiGood">赚外快&#160;热推商品</string>
    <string name="BaseService_QianChaGood">黔茶推荐</string>
    <string name="BaseService_Share">分享到</string>
    <string name="BaseService_Backup">复制赚外快</string>
    <string name="FenXing_Content">推荐此商品，这是很好！</string>
    <string name="BaseService_ZhuanWaiKuai_Prefix">佣金：</string>
    <string name="BaseService_TeChan_Prefix">优惠价：</string>
    <string name="Preferential_Hint">请输入搜索关键字</string>
    <string name="Preferential_Value">面值：</string>
    <string name="Preferential_Date">有效期：</string>
    <string name="Preferential_Address">地址：</string>
    <string name="Preferential_Phone">电话：</string>
    <string name="PreferentialDet_Prefer">优惠券</string>
    <string name="PreferentialDet_PhoneNum">联系电话：</string>
    <string name="PreferentialDet_TimeLine">营业时间：</string>
    <string name="PreferentialDet_FindPosition">查看地理位置</string>
    <string name="PreferentialDet_ObjectTitle">商家介绍</string>
    <string name="PreferentialDet_Detail">参考图片</string>
    <string name="PreferentialDet_UseInfo">使用规则：</string>
    <string name="PreferentialBranchMain_Branch">分类</string>
    <string name="PreferentialBranchMain_Food">美食餐饮</string>
    <string name="PreferentialBranchMain_Rest">休闲娱乐</string>
    <string name="PreferentialBranchMain_Life">生活服务</string>
    <string name="PreferentialBranchMain_Hotel">酒店</string>
    <string name="PreferentialBranchMain_Beautiful">丽人</string>
    <string name="EarnMoney_Summary">赚外快流程</string>
    <string name="EarnMoney_ProductList">推广商品排行榜</string>
    <string name="EarnMoney_PreferMoney">优惠价：</string>
    <string name="EarnMoney_Profit">返利</string>
    <string name="specialartist_button">去购物车结算</string>
    <string name="specialartist_addbasket">加入购物车</string>
    <string name="specialartist_share">收藏</string>
    <string name="MainMenu_ZuiXinHuoDong">最新优惠集合</string>
    <string name="MainMenu_LeGouShangCheng">黔特优</string>
    <string name="MainMenu_ShengHuoChaoShi">赚外快</string>
    <string name="MainMenu_JiaZhuangJianCai">一元券</string>
    <string name="MainMenu_QianJiuQianCha">优惠集合</string>
    <string name="MainMenu_XueShengZhuanQu">黔茶汇</string>
    <string name="MainMenu_YiYuanQuan">黔酒汇</string>
    <string name="MainMenu_TeMaiHui">黔特产</string>
    <string name="MainMenu_ZhuanWaiKuai">附近商家</string>
    <string name="MainMenu_Msg_Exit">再按一次返回键退出</string>
    <string name="PersonInfo_Register">注册</string>
    <string name="PersonInfo_Login">登录</string>
    <string name="PersonInfo_Title">用户登录</string>
    <string name="PersonInfo_ForgotPassword">忘记密码?</string>
	<string name="Articles_ShopPreferPrice">市场优惠价：</string>
    <string name="Articles_PreServePrice">会员预付价：</string>
    <string name="Articles_ReserveAmount">库存数量：</string>
    <string name="Articles_BuyAmount">购买数量：</string>
    <string name="Articles_ArtStandard">商品规格：</string>
    <string name="Articles_ArtStandard1">商品规格1：</string>
    <string name="Articles_ExtraPrice">推荐佣金：</string>
    <string name="Articles_AmountUnit">件</string>
    <string name="Articles_BuyArticle">收藏此商品</string>
    <string name="Articles_ShareArticle">分享给好友</string>
    <string name="Articles_TabHeader1">商品介绍</string>
    <string name="Articles_TabHeader2">商品评论</string>
    <string name="Articles_TabHeader3">商品咨询</string>
    <string name="Articles_PermissionPrice">登录可见</string>
    <string name="Articles_EvaluateGood">好评：</string>
    <string name="Articles_EvaluateNormal">中评：</string>
    <string name="Articles_EvaluateBad">差评：</string>
    <string name="Articles_EvaluateGoodPro">好评度</string>
    <string name="Articles_SendAsk">提交咨询</string>
    <string name="Articles_MoreEvaluate">更多评论</string>
    <string name="Articles_MoreAsk">更多咨询</string>
    <string name="Articles_EditHint">描述你要咨询的问题！</string>
    <string name="Articles_AskHead">咨询内容：</string>
    <string name="Articles_BuyNow">立即购买</string>
    <string name="Articles_Basket_Title">我的购物车</string>
    <string name="Articles_Basket_AllChip">总计：</string>
    <string name="Articles_Basket_Price">商品金额：</string>
    <string name="Articles_Basket_VaryPrice">邮费：</string>
    <string name="Articles_Basket_PreferPrice">优惠：</string>
    <string name="Articles_Basket_Count">数量：</string>
    <string name="Articles_Basket_Delete">删除：</string>
    <string name="Articles_Basket_Calculate">去结算</string>
    <string name="Articles_Basket_NoSelected">没有选择的物品</string>
    <string name="OrderConfirm_Title">订单确认</string>
    <string name="OrderConfirm_ReceiverInfo">收货人信息</string>
    <string name="OrderConfirm_Receiver">收货人：</string>
    <string name="OrderConfirm_Phone">电话：</string>
    <string name="OrderConfirm_Address">地址：</string>
    <string name="OrderConfirm_PayAndDeliveryMethod">支付及配送方式</string>
    <string name="OrderConfirm_PayMethod">支付方式：</string>
    <string name="OrderConfirm_DeliveryMethod">配送方式：</string>
    <string name="OrderConfirm_CommodityList">商品清单</string>
    <string name="OrderConfirm_Count">数量：%d个</string>
    <string name="OrderConfirm_LeaveMessage">给卖家留言</string>
    <string name="OrderConfirm_PayableAmount">应付金额：</string>
    <string name="OrderConfirm_CommodityPrice">商品金额：</string>
    <string name="OrderConfirm_Postage">邮费：</string>
    <string name="OrderConfirm_Preference">优惠：</string>
    <string name="OrderConfirm_GoToPay">去收银台付款</string>
    <string name="SelectReceiver_NoSelected">没有选择的收货人</string>
    <string-array name="DeliveryMode_String">
        <item>自提付款</item>
        <item>付款自提</item>
        <item>快递</item>
    </string-array>
    <string-array name="DeliveryMode_Id">
        <item>1</item>
        <item>17</item>
        <item>16</item>
    </string-array>
    <string name="select_receiver">选择收货人</string>
    <string name="add_receiver">新建联系人</string>
    <string name="OrderConfirm_MSG_Empty">暂无货物</string>
    <string name="Pay_MoneyToPay">订单所需支付金额为：</string>
    <string name="Pay_PaymentStatement">你通过官方发行的礼品卡或邦币支付：</string>
    <string name="Pay_GiftCardNo">礼品卡卡号：</string>
    <string name="Pay_GiftCardPassword">礼品卡密码：</string>
    <string name="Pay_GiftCardBalance">礼品卡余额：</string>
    <string name="Pay_InquireBalance">查询余额</string>
    <string name="Pay_Notice1">你当前礼品卡余额为</string>
    <string name="Pay_Notice11">你当前邦币为</string>
    <string name="Pay_Notice2">使用</string>
    <string name="Pay_Notice3">礼品卡进行支付。</string>
    <string name="Pay_Notice31">邦币进行支付。</string>
    <string name="Pay_Notice4">剩下的</string>
    <string name="Pay_Notice5">元你可以通过以下方式支付：</string>
    <string name="Pay_Submit">确认付款</string>
	<string name="HuiYuanZhongXin_Title">会员中心</string>
    <string name="HuiYuanZhongXin_News">新消息 [%d]</string>
    <string name="HuiYuanZhongXin_DingDanZhongXin">订单中心</string>
    <string name="HuiYuanZhongXin_DingDanZhuangTaiChaXun">订单状态查询</string>
    <string name="HuiYuanZhongXin_WoDeDingDan">我的订单</string>
    <string name="HuiYuanZhongXin_ZhangHuZhongXin">帐户中心</string>
    <string name="HuiYuanZhongXin_WoDeXiaoXi">我的消息</string>
    <string name="HuiYuanZhongXin_WoDeBangKe">我的邦客</string>
    <string name="HuiYuanZhongXin_WoDeYouHuiJuan">我的优惠劵</string>
    <string name="HuiYuanZhongXin_WoDeShouCang">我的收藏</string>
    <string name="HuiYuanZhongXin_ShouHuoDiZhiGuanLi">收货地址管理</string>
    <string name="HuiYuanZhongXin_XiuGaiMiMa">修改密码</string>
    <string name="HuiYuanZhongXin_FuWuGongNeng">服务功能</string>
    <string name="HuiYuanZhongXin_LiPinKa">礼品卡</string>
    <string name="HuiYuanZhongXin_PingLunZiXun">评论咨询</string>
    <string name="HuiYuanZhongXin_TouSuJianYi">投诉建议</string>
    <string name="HuiYuanZhongXin_ShouCang_Msg_Title">删除收藏</string>
    <string name="HuiYuanZhongXin_ShouCang_Msg_Contents">确定要删除选择的收藏吗？</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_Title">订单查询速查</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_DingDanBianHao">订单编号：</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_ChaXun">查询</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_DingDanHao">订单号：</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_TiJiaoShiJian">提交时间：</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_PeiSongFangShi">配送方式：</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_TiShi">提示：</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_TiShi_Content">你选择的配送方式为</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_OrderNoShouldNotBeEmpty">订单编号不能为空</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_ProductCount_Fmt">%d件</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_PayTime_Msg_1">您已使用支付宝支付了订单，请等待发货。</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_PayTime_Msg_2">您已使用礼品卡和支付宝支付了订单，请等待发货。</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_SendTime_Msg_1">您的订单商品已发货，物流单号为：xxxxxxxxx，请注意查收。</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_SendTime_Msg_2">您的订单商品已配捡完成，请到贵阳市花溪区甲秀南路溪山御景综合楼提货。</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_RecvTime_Msg">您的订单交易完成，感谢你的下次光临。</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_CancelTime_Msg">您的订单已被作废。</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_KuaiDi">快递</string>
    <string name="HuiYuanZhongXin_DingDanChaXun_ZiTi">自提</string>
    <string name="HuiYuanZhongXin_YouHuiJuan_YouXiaoQi">| 有效期至</string>
    <string name="HuiYuanZhongXin_DiZhiGuanLi_ShouHuoRen">收货人：</string>
    <string name="HuiYuanZhongXin_DiZhiGuanLi_DianHua">电话：</string>
    <string name="HuiYuanZhongXin_DiZhiGuanLi_DiZhi">地址：</string>
    <string name="HuiYuanZhongXin_DiZhiGuanLi_XinZengShouHuoRenXinXi">新增收货人信息</string>
    <string name="HuiYuanZhongXin_DiZhiGuanLi_TiJiaoXinZeng">提交新增</string>
    <string name="HuiYuanZhongXin_LiPinKa_JiHuoChengGong">礼品卡激活成功！</string>
    <string name="HuiYuanZhongXin_LiPinKa_GongXi">恭喜你，你的礼品卡：</string>
    <string name="HuiYuanZhongXin_LiPinKa_JiHuoChengGong_2">激活成功！</string>
    <string name="HuiYuanZhongXin_LiPinKa_YuEWei">礼品卡余额为：</string>
    <string name="str_money_yuan">元</string>
    <string name="ok">确定</string>
</resources>